--- a/ui/pantry-ui/src/app/settings/settings.component.html
+++ b/ui/pantry-ui/src/app/settings/settings.component.html
@@ -196,5 +196,11 @@
                 <app-weather-settings></app-weather-settings>
             </div>
         </mat-tab>
+
+        <mat-tab label="Hardware">
+            <div class="tab-content">
+                <app-hardware-settings></app-hardware-settings>
+            </div>
+        </mat-tab>
     </mat-tab-group>
 </div>
